--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -17,11 +17,13 @@
     
 <header>  
 	<nav class="header-2">
-		<a href="index.html" id="logo">
+		<a href="accueil.html">
        	 <i class="fa fa-arrow-left"></i>
   		</a>
-		<a href="#"><img src="images/ohmyfood.png" alt="logo de ohmyfood"/>
+		<div class="logo-menus">
+			<a href="#"><img src="images/ohmyfood.png" alt="logo de ohmyfood"/>
 		</a>	
+		</div>
 	</nav>
 </header>
     
