--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -152,7 +152,7 @@
   <!-- Footer !-->
 		
 <footer>
-	<div class="footer">
+	<div class="footer-menu">
 		<h3>ohmyfood</h3>
 			<div class="propose">
 				<ul>
