--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -153,30 +153,32 @@
 		
 <footer>
 	<div class="footer-menu">
-		<h3>ohmyfood</h3>
-			<div class="propose">
+		<a href="#">
+			<h3 class="logo-footer">ohmyfood</h3>
+		</a> 
+			<div class="links">
 				<ul>
-					<li>
-						<a href="#" class="propose_resto">
-						<i class="fas fa-utensils"></i>
-						<h3>Proposer un restaurant</h3>
+					<li>	
+						<a href="#">
+							<i class="fas fa-utensils"></i>
+							Proposer un restaurant
+						</a>
+					</li>
+					<li>	
+						<a href="#"> 
+							<i class="fas fa-hands-helping"></i>
+							Devenir partenaire
 						</a>
 					</li>
 					<li>
-						<a href="#" class="partenaire">
-						 <i class="fas fa-hands-helping"></i>
-						<h3>Devenir partenaire</h3>
+						<a href="#">
+							Mentions légales
 						</a>
 					</li>
 					<li>
-						<a href="#" class="legale_mentions">
-							<h3>Mentions légales</h3>	
+						<a href="#">
+							Contact
 						</a>
-					</li>
-					<li>
-						<a href="#" class="contact">
-							<h3>Contact</h3>
-					</a>
 					</li>
 				</ul>
 			</div>
