--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -45,7 +45,7 @@
      </div>
 	 <div class="all_cards">
 		<div class="entrees">
-			<h2>Entrées</h2>
+			<h2 class="menu-type">Entrées</h2>
 			<i class="fas fa-horizontal-rule"></i>
 				
 			<div class="cards_menu">
@@ -152,7 +152,7 @@
   <!-- Footer !-->
 		
 <footer>
-	<div class="footer-menu">
+	<div class="footer">
 		<a href="#">
 			<h3 class="logo-footer">ohmyfood</h3>
 		</a> 
