--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -48,13 +48,13 @@
 			<i class="fas fa-horizontal-rule"></i>
 				
 			<div class="cards_menu">
-					<h2>Fricassée d'escargots</h2>
-					<p>Au piment d'espelette</p>
-						<label>
-							<p>25€</p>
-							<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
-						</label>
-				</div>
+				<h2>Fricassée d'escargots</h2>
+				<p>Au piment d'espelette</p>
+					<label>
+						<p>25€</p>
+						<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
+					</label>
+			</div>
 
 			<div class="cards_menu">	
 				<h2>Foie gras de canard mi-cuit</h2>
@@ -76,7 +76,7 @@
 		</div>
 
 		<div class="plats">
-		<h2>Plats</h2>
+		<h2 class="menu-type">Plats</h2>
 		<i class="fa fa-horizontal-rule"></i>
 			
 			<div class="cards_menu">	
@@ -108,33 +108,33 @@
 		</div>
 
 		<div class="desserts">
-			<h2>Desserts</h2>
+			<h2 class="menu-type">Desserts</h2>
 			<i class="fa fa-horizontal-rule"></i>
 			
 			<div class="cards_menu">
-				<label>
-					<h2>Paris-Brest</h2>
-					<p>Revisité</p>
-					<p>18€</p>
-					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
+				<h2>Paris-Brest</h2>
+				<p>Revisité</p>
+					<label>
+						<p>18€</p>
+						<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
 				</label>
 			</div>
 			
 			<div class="cards_menu">
-				<label>
-					<h2>Macaron au chocolat d'exception</h2>
-					<p>Et glace à la vanille de Madagascar</p>
-					<p>22€</p>
-					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
-				</label>
+				<h2>Macaron au chocolat d'exception</h2>
+				<p>Et glace à la vanille de Madagascar</p>
+					<label>
+						<p>22€</p>
+						<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
+					</label>
 			</div>
 			
 			<div class="cards_menu">
-				<label>
-					<h2>Mousse au chocolat</h2>
-					<p>Au piment d'espelette et à la truffe noire</p>
-					<p>23€</p>
-					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
+				<h2>Mousse au chocolat</h2>
+				<p>Au piment d'espelette et à la truffe noire</p>
+					<label>
+						<p>23€</p>
+						<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
 				</label>
 			</div>
         </div>
