--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -17,7 +17,7 @@
    
 <header>  		
 	<nav class="header-2">
-		<a href="index.html" id="logo_menu">
+		<a href="accueil.html">
 			<i class="fa fa-arrow-left"></i>
 		</a>
 		<div class="logo-menus">
