update html & css

--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -152,7 +152,7 @@
 		
 <footer>
 	<div class="footer">
-		<a href="#">
+		<a href="accueil.html">
 			<h3 class="logo-footer">ohmyfood</h3>
 		</a> 
 			<div class="links">
