updt fichiers html

--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -45,7 +45,6 @@
 	<div class="all_cards">
   	  <div class="entrees">
       	<h2 class="menu-type">Entrées</h2>
-	 	<i class="fa fa-horizontal-rule"></i>
       
 		<div class="cards_menu">
 			<h2>Ravioles de foie gras</h2>
@@ -86,7 +85,6 @@
 
     <div class="plats">
       <h2 class="menu-type">Plats</h2>
-	    <i class="fa fa-horizontal-rule"></i>
      
 	<div class="cards_menu">
     	<h2>Noix de coquilles Saint-Jacques</h2>
@@ -119,7 +117,6 @@
 
   <div class="desserts">
     <h2 class="menu-type">Desserts</h2>
-	  <i class="fa fa-horizontal-rule"></i>
    
 	<div class="cards_menu">  	
     	<h2>Macaron noisette et chocolat</h2>
@@ -162,7 +159,7 @@
 		
 <footer>
 	<div class="footer">
-		<a href="#">
+		<a href="accueil.html">
 			<h3 class="logo-footer">ohmyfood</h3>
 		</a> 
 			<div class="links">
