--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -47,7 +47,6 @@
 		<div class="all_cards">
 			<div class="entrees">
 			<h2 class="menu-type">Entrées</h2>
-			<i class="fa fa-horizontal-rule"></i>
 		
 			<div class="cards_menu">	
 				<h2>Tartare de thon</h2>
@@ -79,7 +78,6 @@
 	   
 		<div class="plats">
 			<h2 class="menu-type">Plats</h2>
-			<i class="fa fa-horizontal-rule"></i>
 
 			<div class="cards_menu">
 				<h2>Poulet rôti aux herbes de Provence</h2>
@@ -111,7 +109,6 @@
 
 		<div class="desserts">
 			<h2 class="menu-type">Desserts</h2>
-			<i class="fa fa-horizontal-rule"></i>
 				
 			<div class="cards_menu">
 				<h2>Farandole de desserts</h2>
@@ -153,7 +150,7 @@
 		
 <footer>
 	<div class="footer">
-		<a href="#">
+		<a href="accueil.html">
 			<h3 class="logo-footer">ohmyfood</h3>
 		</a> 
 			<div class="links">
