--- a/accueil.html
+++ b/accueil.html
@@ -26,16 +26,18 @@
 	
 <!-- Bannière lieu  et exploration !-->
 <form>
-
 	<div class="position">
 		<i class="fas fa-map-marker-alt"></i>
 		<label for="localisation">Paris, Belleville</label>
 		<input style="text" id="localisation" placeholder="Paris, Belleville">
 	</div>
+
 	<div class="principal_title">
 		<h2>Réservez le menu qui vous convient</h2>
 		<p>Découvrez des restaurants d'exception, sélectionnés par vos soins.</p>
-		<button type="submit" class="explore">Explorer nos restaurants</button>
+		<a href="#restaurants">
+			<button type="submit" class="explore">Explorer nos restaurants</button>
+		</a>
 	</div>
 </form>
 
