--- a/accueil.html
+++ b/accueil.html
@@ -35,9 +35,11 @@
 	<div class="principal_title">
 		<h2>Réservez le menu qui vous convient</h2>
 		<p>Découvrez des restaurants d'exception, sélectionnés par vos soins.</p>
-		<a href="#restaurants">
-			<button type="submit" class="explore">Explorer nos restaurants</button>
-		</a>
+		<div class="explore">
+			<a href="#restaurants">
+				<p>Explorer nos restaurants</p>
+			</a>
+		</div>
 	</div>
 </form>
 
