updt html & css

--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -40,16 +40,16 @@
 		<fieldset>
       
 	<div class="title">
-        <h1>La palette du goût</h1>
-        <i class="far fa-heart"></i>
-     </div>
+        <h1>La palette du goût<i class="far fa-heart"></i></h1>
+    </div>
 	 <div class="all_cards">
-		<div class="entrees">
-			<h2 class="menu-type">Entrées</h2>
+		<section class="entrees">
+		<h2 class="menu-type">Entrées</h2>
 				
 			<div class="cards_menu">
 				<h2>Fricassée d'escargots</h2>
 				<p>Au piment d'espelette</p>
+				</form>
 					<label>
 						<p>25€</p>
 						<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
@@ -73,9 +73,9 @@
 						<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
 				</label>
 			</div>
-		</div>
+		</section>
 
-		<div class="plats">
+		<section class="plats">
 		<h2 class="menu-type">Plats</h2>
 			
 			<div class="cards_menu">	
@@ -104,9 +104,9 @@
 						<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
 					</label>
 			</div>
-		</div>
+		</section>
 
-		<div class="desserts">
+		<section class="desserts">
 			<h2 class="menu-type">Desserts</h2>
 			
 			<div class="cards_menu">
@@ -135,7 +135,7 @@
 						<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
 				</label>
 			</div>
-        </div>
+		</section>
     </div>
 
 <button class="command_btn">Commander</button>
