--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -30,10 +30,9 @@
     
 <main>
 	
-	<!-- 
-		<div id="banniere-menu">
+	<div id="banniere-menu">
 		<img src="images/palettedugout.jpg" alt="photo d'un plat">
-	</div> !-->  
+	</div>
 
  <!-- Menu La palette du goût !-->
   
