--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -42,7 +42,7 @@
 	<div class="title">
         <h1>La palette du goût<i class="far fa-heart"></i></h1>
     </div>
-	 <div class="all_cards">
+	 <div class="all_cards-manu">
 		<section class="entrees">
 		<h2 class="menu-type">Entrées</h2>
 				
