--- a/accueil.html
+++ b/accueil.html
@@ -81,7 +81,7 @@
 	
 <section id="restaurants">	
 		<h2>Restaurants</h2>
-			<div class="all_cards-menu">	
+			<div class="all_cards">	
 				<article class="card_choice">	
 					<a  href="lapalettedugout.html">
 						<p class="new">Nouveau</p>
