--- a/a_lafrancaise.html
+++ b/a_lafrancaise.html
@@ -42,10 +42,9 @@
 		<fieldset>
 	    
 		<div class="title">
-	    	<h1>A la française</h1>
-		 	<i class="far fa-heart"></i>
+	    	<h1>A la française<i class="far fa-heart"></i></h1> 	
 	    </div>
-		<div class="all_cards">
+		<div class="all_cards-menu">
 			<div class="entrees">
 				<h2 class="menu-type">Entrées</h2>
 				<i class="fa fa-horizontal-rule"></i>
