--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -40,10 +40,9 @@
 	  <fieldset>
     
 	<div class="title">
-      <h1>La note enchantée</h1>
-       <i class="far fa-heart"></i>
+      <h1>La note enchantée<i class="far fa-heart"></i></h1>
     </div>
-	<div class="all_cards">
+	<div class="all_cards-menu">
   	  <div class="entrees">
       	<h2 class="menu-type">Entrées</h2>
       
