--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -42,10 +42,9 @@
 	   <fieldset>
      
 		<div class="title">
-			<h1>Le délice des sens</h1>
-			<i class="far fa-heart"></i>
+			<h1>Le délice des sens<i class="far fa-heart"></i></h1>
 		</div>
-		<div class="all_cards">
+		<div class="all_cards-menu">
 			<div class="entrees">
 			<h2 class="menu-type">Entrées</h2>
 		
