rajout des span dans label

--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -18,7 +18,7 @@
     
 <header>  
 	<nav class="header-2">
-		<a href="accueil.html">
+		<a href="index.html">
        	 <i class="fa fa-arrow-left"></i>
   		</a>
 		<div class="logo-menus">
@@ -47,30 +47,29 @@
 		<h2 class="menu-type">Entrées</h2>
 				
 			<div class="cards_menu">
-				<h2>Fricassée d'escargots</h2>
-				<p>Au piment d'espelette</p>
-				</form>
-					<label>
-						<p>25€</p>
-						<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
-					</label>
+				<label>
+					<span class="menu-title">Fricassée d'escargots</span>
+					<span class="accomp">Au piment d'espelette</span>
+					<span class="price">25€</span>
+					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
+				</label>
 			</div>
 
 			<div class="cards_menu">	
-				<h2>Foie gras de canard mi-cuit</h2>
-				<p>Et ses copeaux de truffe noire</p>
-					<label>
-						<p>35€</p>
-						<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
-					</label>
+				<label>
+					<span class="menu-title">Foie gras de canard mi-cuit</span>
+					<span class="accomp">Et ses copeaux de truffe noire</span>
+					<span class="price">35€</span>
+					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
+				</label>
 			</div>
 			
 			<div class="cards_menu">
-				<h2>Oeuf au plat</h2>
-				<p>Assaisonné à la truffe sur lit de...</p>
-					<label>
-						<p>20€</p>
-						<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
+				<label>
+					<span class="menu-title">Oeuf au plat</span>
+					<span class="accomp">Assaisonné à la truffe sur lit de...</span>
+					<span class="price">20€</span>
+					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
 				</label>
 			</div>
 		</section>
@@ -79,30 +78,30 @@
 		<h2 class="menu-type">Plats</h2>
 			
 			<div class="cards_menu">	
-				<h2>Filet de boeuf aux herbes</h2>
-				<p>Accompagné de sa ribambelle de légu...</p>
-					<label>
-						<p>44€</p>
-						<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
-					</label>
+				<label>
+					<span class="menu-title">Filet de boeuf aux herbes</span>
+					<span class="accomp">Accompagné de sa ribambelle de légu...</span>
+					<span class="price">44€</span>
+					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
+				</label>
 			</div>
 			
 			<div class="cards_menu">
-				<h2>Parmentier de queue de boeuf</h2>
-				<p>A la truffe noire et sa purée de panais</p>
-					<label>
-						<p>35€</p>
-						<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
-					</label>
+				<label>
+					<span class="menu-title">Parmentier de queue de boeuf</span>
+					<span class="accomp">A la truffe noire et sa purée de panais</span>
+					<span class="price">35€</span>
+					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
+				</label>
 			</div>
 
 			<div class="cards_menu">	
-				<h2>Filet de Turbot</h2>
-				<p>Aux agrumes</p>
-					<label>
-						<p>44€</p>
-						<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
-					</label>
+				<label>
+					<span class="menu-title">Filet de Turbot</span>
+					<span class="accomp">Aux agrumes</span>
+					<span class="price">44€</span>
+					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
+				</label>
 			</div>
 		</section>
 
@@ -110,29 +109,29 @@
 			<h2 class="menu-type">Desserts</h2>
 			
 			<div class="cards_menu">
-				<h2>Paris-Brest</h2>
-				<p>Revisité</p>
-					<label>
-						<p>18€</p>
-						<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
+				<label>
+					<span class="menu-title">Paris-Brest</span>
+					<span class="accomp">Revisité</span>
+					<span class="price">18€</span>
+					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
 				</label>
 			</div>
 			
 			<div class="cards_menu">
-				<h2>Macaron au chocolat d'exception</h2>
-				<p>Et glace à la vanille de Madagascar</p>
-					<label>
-						<p>22€</p>
-						<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
-					</label>
+				<label>
+					<span class="menu-title">Macaron au chocolat d'exception</span>
+					<span class="accomp">Et glace à la vanille de Madagascar</span>
+					<span class="price">22€</span>
+					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
+				</label>
 			</div>
 			
 			<div class="cards_menu">
-				<h2>Mousse au chocolat</h2>
-				<p>Au piment d'espelette et à la truffe noire</p>
-					<label>
-						<p>23€</p>
-						<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
+				<label>
+					<span class="menu-title">Mousse au chocolat</span>
+					<span class="accomp">Au piment d'espelette et à la truffe noire</span>
+					<span class="price">23€</span>
+					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
 				</label>
 			</div>
 		</section>
