--- a/index.html
+++ b/index.html
@@ -96,10 +96,14 @@
 							<p class="new">Nouveau</p>
 							<img src="images/noteenchantee.jpg" alt="photo d'un plat">
 							<h3>La note enchantée</h3>
-							<p class="site">Charonne</p>	
-							<i class="far fa-heart"></i>
+							<p class="site">Charonne</p>			
 						</a>
-
+						<div class="heart">
+							<i class="far fa-heart"></i>
+						</div>
+						<div class="heart-full">
+							<i class="far fa-heart"></i>
+						</div>
 					</article>
 
 					<article class="card_choice">
