--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
 					<div class="heart">
 						<i class="far fa-heart"></i>
 					</div>
+					<div class="heart-full">
+						<i class="far fa-heart"></i>
+					</div>
 				</article>
 
 				<article class="card_choice">
@@ -115,6 +118,9 @@
 						<div class="heart">
 							<i class="far fa-heart"></i>
 						</div>
+						<div class="heart-full">
+							<i class="far fa-heart"></i>
+						</div>
 					</article>
 
 					<article class="card_choice">
@@ -124,6 +130,9 @@
 							<p class="site">Folie-Méricourt</p>
 						</a>
 						<div class="heart">
+							<i class="far fa-heart"></i>
+						</div>
+						<div class="heart-full">
 							<i class="far fa-heart"></i>
 						</div>
 					</article>
