--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 						<div class="heart">
 							<i class="far fa-heart"></i>
 						</div>
-						<div class="heart-full">
+						<div class="heart__full">
 							<i class="far fa-heart"></i>
 						</div>
 					</article>
