--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 						<div class="heart">
 							<i class="far fa-heart"></i>
 						</div>
-						<div class="heart-full">
+						<div class="heart__full">
 							<i class="far fa-heart"></i>
 						</div>
 					</article>
