petit coeur réussiiiii

--- a/index.html
+++ b/index.html
@@ -85,13 +85,9 @@
 						<img src="images/palettedugout.jpg" alt="photo d'un plat">
 						<h3>La palette du goût</h3>
 						<p class="site">Ménilmontant</p>	
+						<i class="far fa-heart"></i>
+						<i class="fas fa-heart"></i>
 					</a>
-					<div class="heart">
-						<i class="far fa-heart"></i>
-					</div>
-					<div class="heart__full">
-						<i class="far fa-heart"></i>
-					</div>
 				</article>
 
 				<article class="card_choice">
@@ -99,14 +95,10 @@
 							<p class="new">Nouveau</p>
 							<img src="images/noteenchantee.jpg" alt="photo d'un plat">
 							<h3>La note enchantée</h3>
-							<p class="site">Charonne</p>			
+							<p class="site">Charonne</p>
+							<i class="far fa-heart"></i>
+							<i class="fas fa-heart"></i>
 						</a>
-						<div class="heart">
-							<i class="far fa-heart"></i>
-						</div>
-						<div class="heart__full">
-							<i class="far fa-heart"></i>
-						</div>
 					</article>
 
 					<article class="card_choice">
@@ -114,13 +106,9 @@
 							<img src="images/alafrancaise.jpg" alt="photo d'un plat">
 							<h3>A la française</h3>
 							<p class="site">Cité Rouge</p>	
+							<i class="far fa-heart"></i>
+							<i class="fas fa-heart"></i>
 						</a>
-						<div class="heart">
-							<i class="far fa-heart"></i>
-						</div>
-						<div class="heart__full">
-							<i class="far fa-heart"></i>
-						</div>
 					</article>
 
 					<article class="card_choice">
@@ -128,13 +116,9 @@
 							<img src="images/delicedessens.jpg" alt="photo d'un plat">
 							<h3>Le délice des sens</h3>
 							<p class="site">Folie-Méricourt</p>
+							<i class="far fa-heart"></i>
+							<i class="fas fa-heart"></i>
 						</a>
-						<div class="heart">
-							<i class="far fa-heart"></i>
-						</div>
-						<div class="heart__full">
-							<i class="far fa-heart"></i>
-						</div>
 					</article>
 			</div>
 </section>
