début du check en hover

--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -47,30 +47,30 @@
 		<h2 class="menu-type">Entrées</h2>
 				
 			<div class="cards_menu">
-				<label>
-					<span class="menu-title">Fricassée d'escargots</span>
-					<span class="accomp">Au piment d'espelette</span>
-					<span class="price">25€</span>
-					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
-				</label>
+					<h3>Fricassée d'escargots</h3>
+					<p class="accomp">Au piment d'espelette</p>
+					<p class="price">25€</p>
+					<div class="check-circle">
+						<i class="far fa-check-circle"></i>
+					</div>
 			</div>
 
 			<div class="cards_menu">	
-				<label>
-					<span class="menu-title">Foie gras de canard mi-cuit</span>
-					<span class="accomp">Et ses copeaux de truffe noire</span>
-					<span class="price">35€</span>
-					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
-				</label>
+					<h3>Foie gras de canard mi-cuit</h3>
+					<p class="accomp">Et ses copeaux de truffe noire</p>
+					<p class="price">35€</p>
+					<div class="check-circle">
+						<i class="far fa-check-circle"></i>
+					</div>
 			</div>
 			
 			<div class="cards_menu">
-				<label>
-					<span class="menu-title">Oeuf au plat</span>
-					<span class="accomp">Assaisonné à la truffe sur lit de...</span>
-					<span class="price">20€</span>
-					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
-				</label>
+					<h3>Oeuf au plat</h3>
+					<p class="accomp">Assaisonné à la truffe sur lit de...</p>
+					<p class="price">20€</p>
+					<div class="check-circle">
+						<i class="far fa-check-circle"></i>
+					</div>
 			</div>
 		</section>
 
@@ -78,30 +78,30 @@
 		<h2 class="menu-type">Plats</h2>
 			
 			<div class="cards_menu">	
-				<label>
-					<span class="menu-title">Filet de boeuf aux herbes</span>
-					<span class="accomp">Accompagné de sa ribambelle de légu...</span>
-					<span class="price">44€</span>
-					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
-				</label>
+					<h3>Filet de boeuf aux herbes</h3>
+					<p class="accomp">Accompagné de sa ribambelle de légu...</p>
+					<p class="price">44€</p>
+					<div class="check-circle">
+						<i class="far fa-check-circle"></i>
+					</div>
 			</div>
 			
 			<div class="cards_menu">
-				<label>
-					<span class="menu-title">Parmentier de queue de boeuf</span>
-					<span class="accomp">A la truffe noire et sa purée de panais</span>
-					<span class="price">35€</span>
-					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
-				</label>
+					<h3>Parmentier de queue de boeuf</h3>
+					<p class="accomp">A la truffe noire et sa purée de panais</p>
+					<p class="price">35€</p>
+					<div class="check-circle">
+						<i class="far fa-check-circle"></i>
+					</div>
 			</div>
 
 			<div class="cards_menu">	
-				<label>
-					<span class="menu-title">Filet de Turbot</span>
-					<span class="accomp">Aux agrumes</span>
-					<span class="price">44€</span>
-					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
-				</label>
+					<h3>Filet de Turbot</h3>
+					<p class="accomp">Aux agrumes</p>
+					<p class="price">44€</p>
+					<div class="check-circle">
+						<i class="far fa-check-circle"></i>
+					</div>
 			</div>
 		</section>
 
@@ -109,30 +109,30 @@
 			<h2 class="menu-type">Desserts</h2>
 			
 			<div class="cards_menu">
-				<label>
-					<span class="menu-title">Paris-Brest</span>
-					<span class="accomp">Revisité</span>
-					<span class="price">18€</span>
-					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
-				</label>
+					<h3>Paris-Brest</h3>
+					<p class="accomp">Revisité</p>
+					<p class="price">18€</p>
+					<div class="check-circle">
+						<i class="far fa-check-circle"></i>
+					</div>
 			</div>
 			
 			<div class="cards_menu">
-				<label>
-					<span class="menu-title">Macaron au chocolat d'exception</span>
-					<span class="accomp">Et glace à la vanille de Madagascar</span>
-					<span class="price">22€</span>
-					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
-				</label>
+					<h3>Macaron au chocolat d'exception</h3>
+					<p class="accomp">Et glace à la vanille de Madagascar</p>
+					<p class="price">22€</p>
+					<div class="check-circle">
+						<i class="far fa-check-circle"></i>
+					</div>
 			</div>
 			
 			<div class="cards_menu">
-				<label>
-					<span class="menu-title">Mousse au chocolat</span>
-					<span class="accomp">Au piment d'espelette et à la truffe noire</span>
-					<span class="price">23€</span>
-					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
-				</label>
+					<h3>Mousse au chocolat</h3>
+					<p class="accomp">Au piment d'espelette et à la truffe noire</p>
+					<p class="price">23€</p>
+					<div class="check-circle">
+						<i class="far fa-check-circle"></i>
+					</div>
 			</div>
 		</section>
     </div>
