continuité de l'animation check

--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -64,12 +64,14 @@
 					</div>
 			</div>
 			
-			<div class="cards_menu">
+			<div class="cards_menu anim__card">
 					<h3>Oeuf au plat</h3>
 					<p class="accomp">Assaisonné à la truffe sur lit de...</p>
 					<p class="price">20€</p>
-					<div class="check-circle">
+					<div class="check__bg">
+						<div class="check__icon">
 						<i class="far fa-check-circle"></i>
+						</div>
 					</div>
 			</div>
 		</section>
