--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -50,8 +50,10 @@
 					<h3>Fricassée d'escargots</h3>
 					<p class="accomp">Au piment d'espelette</p>
 					<p class="price">25€</p>
-					<div class="check-circle">
-						<i class="far fa-check-circle"></i>
+					<div class="check__bg">
+						<div class="check__icon">
+							<i class="far fa-check-circle"></i>
+						</div>
 					</div>
 			</div>
 
@@ -59,8 +61,10 @@
 					<h3>Foie gras de canard mi-cuit</h3>
 					<p class="accomp">Et ses copeaux de truffe noire</p>
 					<p class="price">35€</p>
-					<div class="check-circle">
-						<i class="far fa-check-circle"></i>
+					<div class="check__bg">
+						<div class="check__icon">
+							<i class="far fa-check-circle"></i>
+						</div>
 					</div>
 			</div>
 			
@@ -70,7 +74,7 @@
 					<p class="price">20€</p>
 					<div class="check__bg">
 						<div class="check__icon">
-						<i class="far fa-check-circle"></i>
+							<i class="far fa-check-circle"></i>
 						</div>
 					</div>
 			</div>
@@ -83,8 +87,10 @@
 					<h3>Filet de boeuf aux herbes</h3>
 					<p class="accomp">Accompagné de sa ribambelle de légu...</p>
 					<p class="price">44€</p>
-					<div class="check-circle">
-						<i class="far fa-check-circle"></i>
+					<div class="check__bg">
+						<div class="check__icon">
+							<i class="far fa-check-circle"></i>
+						</div>
 					</div>
 			</div>
 			
@@ -92,8 +98,10 @@
 					<h3>Parmentier de queue de boeuf</h3>
 					<p class="accomp">A la truffe noire et sa purée de panais</p>
 					<p class="price">35€</p>
-					<div class="check-circle">
-						<i class="far fa-check-circle"></i>
+					<div class="check__bg">
+						<div class="check__icon">
+							<i class="far fa-check-circle"></i>
+						</div>
 					</div>
 			</div>
 
@@ -101,8 +109,10 @@
 					<h3>Filet de Turbot</h3>
 					<p class="accomp">Aux agrumes</p>
 					<p class="price">44€</p>
-					<div class="check-circle">
-						<i class="far fa-check-circle"></i>
+					<div class="check__bg">
+						<div class="check__icon">
+							<i class="far fa-check-circle"></i>
+						</div>
 					</div>
 			</div>
 		</section>
@@ -114,8 +124,10 @@
 					<h3>Paris-Brest</h3>
 					<p class="accomp">Revisité</p>
 					<p class="price">18€</p>
-					<div class="check-circle">
-						<i class="far fa-check-circle"></i>
+					<div class="check__bg">
+						<div class="check__icon">
+							<i class="far fa-check-circle"></i>
+						</div>
 					</div>
 			</div>
 			
@@ -123,17 +135,21 @@
 					<h3>Macaron au chocolat d'exception</h3>
 					<p class="accomp">Et glace à la vanille de Madagascar</p>
 					<p class="price">22€</p>
-					<div class="check-circle">
-						<i class="far fa-check-circle"></i>
+					<div class="check__bg">
+						<div class="check__icon">
+							<i class="far fa-check-circle"></i>
+						</div>
 					</div>
 			</div>
 			
 			<div class="cards_menu">
 					<h3>Mousse au chocolat</h3>
 					<p class="accomp">Au piment d'espelette et à la truffe noire</p>
-					<p class="price">23€</p>
-					<div class="check-circle">
-						<i class="far fa-check-circle"></i>
+					<div class="cards_menu--check">
+						<p class="cards_menu--price">23€</p>
+						<div class="cards_menu--icon">
+							<i class="far fa-check-circle"></i>
+						</div>
 					</div>
 			</div>
 		</section>
