remplacement div menus

--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -49,9 +49,9 @@
 			<div class="cards_menu">
 					<h3>Fricassée d'escargots</h3>
 					<p class="accomp">Au piment d'espelette</p>
-					<p class="price">25€</p>
-					<div class="check__bg">
-						<div class="check__icon">
+					<div class="cards_menu--check">
+						<p class="cards_menu--price">23€</p>
+						<div class="cards_menu--icon">
 							<i class="far fa-check-circle"></i>
 						</div>
 					</div>
@@ -60,9 +60,9 @@
 			<div class="cards_menu">	
 					<h3>Foie gras de canard mi-cuit</h3>
 					<p class="accomp">Et ses copeaux de truffe noire</p>
-					<p class="price">35€</p>
-					<div class="check__bg">
-						<div class="check__icon">
+					<div class="cards_menu--check">
+						<p class="cards_menu--price">23€</p>
+						<div class="cards_menu--icon">
 							<i class="far fa-check-circle"></i>
 						</div>
 					</div>
@@ -71,9 +71,9 @@
 			<div class="cards_menu anim__card">
 					<h3>Oeuf au plat</h3>
 					<p class="accomp">Assaisonné à la truffe sur lit de...</p>
-					<p class="price">20€</p>
-					<div class="check__bg">
-						<div class="check__icon">
+					<div class="cards_menu--check">
+						<p class="cards_menu--price">23€</p>
+						<div class="cards_menu--icon">
 							<i class="far fa-check-circle"></i>
 						</div>
 					</div>
@@ -86,9 +86,9 @@
 			<div class="cards_menu">	
 					<h3>Filet de boeuf aux herbes</h3>
 					<p class="accomp">Accompagné de sa ribambelle de légu...</p>
-					<p class="price">44€</p>
-					<div class="check__bg">
-						<div class="check__icon">
+					<div class="cards_menu--check">
+						<p class="cards_menu--price">23€</p>
+						<div class="cards_menu--icon">
 							<i class="far fa-check-circle"></i>
 						</div>
 					</div>
@@ -97,9 +97,9 @@
 			<div class="cards_menu">
 					<h3>Parmentier de queue de boeuf</h3>
 					<p class="accomp">A la truffe noire et sa purée de panais</p>
-					<p class="price">35€</p>
-					<div class="check__bg">
-						<div class="check__icon">
+					<div class="cards_menu--check">
+						<p class="cards_menu--price">23€</p>
+						<div class="cards_menu--icon">
 							<i class="far fa-check-circle"></i>
 						</div>
 					</div>
@@ -108,9 +108,9 @@
 			<div class="cards_menu">	
 					<h3>Filet de Turbot</h3>
 					<p class="accomp">Aux agrumes</p>
-					<p class="price">44€</p>
-					<div class="check__bg">
-						<div class="check__icon">
+					<div class="cards_menu--check">
+						<p class="cards_menu--price">23€</p>
+						<div class="cards_menu--icon">
 							<i class="far fa-check-circle"></i>
 						</div>
 					</div>
@@ -123,9 +123,9 @@
 			<div class="cards_menu">
 					<h3>Paris-Brest</h3>
 					<p class="accomp">Revisité</p>
-					<p class="price">18€</p>
-					<div class="check__bg">
-						<div class="check__icon">
+					<div class="cards_menu--check">
+						<p class="cards_menu--price">23€</p>
+						<div class="cards_menu--icon">
 							<i class="far fa-check-circle"></i>
 						</div>
 					</div>
@@ -134,9 +134,9 @@
 			<div class="cards_menu">
 					<h3>Macaron au chocolat d'exception</h3>
 					<p class="accomp">Et glace à la vanille de Madagascar</p>
-					<p class="price">22€</p>
-					<div class="check__bg">
-						<div class="check__icon">
+					<div class="cards_menu--check">
+						<p class="cards_menu--price">23€</p>
+						<div class="cards_menu--icon">
 							<i class="far fa-check-circle"></i>
 						</div>
 					</div>
