--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -47,8 +47,10 @@
 		<h2 class="menu-type">Entrées</h2>
 				
 			<div class="cards_menu">
+				<div class="cards__description">
 					<h3>Fricassée d'escargots</h3>
 					<p class="accomp">Au piment d'espelette</p>
+				</div>
 					<div class="cards_menu--check">
 						<p class="cards_menu--price">23€</p>
 						<div class="cards_menu--icon">
@@ -58,8 +60,10 @@
 			</div>
 
 			<div class="cards_menu">	
+				<div class="cards__description">
 					<h3>Foie gras de canard mi-cuit</h3>
 					<p class="accomp">Et ses copeaux de truffe noire</p>
+				</div>
 					<div class="cards_menu--check">
 						<p class="cards_menu--price">23€</p>
 						<div class="cards_menu--icon">
@@ -68,9 +72,11 @@
 					</div>
 			</div>
 			
-			<div class="cards_menu anim__card">
+			<div class="cards_menu">
+				<div class="cards__description">
 					<h3>Oeuf au plat</h3>
-					<p class="accomp">Assaisonné à la truffe sur lit de...</p>
+					<p class="accomp">Assaisonné à la truffe sur lit de caviar</p>
+				</div>
 					<div class="cards_menu--check">
 						<p class="cards_menu--price">23€</p>
 						<div class="cards_menu--icon">
@@ -84,8 +90,10 @@
 		<h2 class="menu-type">Plats</h2>
 			
 			<div class="cards_menu">	
+				<div class="cards__description">
 					<h3>Filet de boeuf aux herbes</h3>
-					<p class="accomp">Accompagné de sa ribambelle de légu...</p>
+					<p>Accompagné de sa ribambelle de légumes</p>
+				</div>
 					<div class="cards_menu--check">
 						<p class="cards_menu--price">23€</p>
 						<div class="cards_menu--icon">
@@ -95,8 +103,10 @@
 			</div>
 			
 			<div class="cards_menu">
+				<div class="cards__description">
 					<h3>Parmentier de queue de boeuf</h3>
 					<p class="accomp">A la truffe noire et sa purée de panais</p>
+				</div>
 					<div class="cards_menu--check">
 						<p class="cards_menu--price">23€</p>
 						<div class="cards_menu--icon">
@@ -106,8 +116,10 @@
 			</div>
 
 			<div class="cards_menu">	
+				<div class="cards__description">
 					<h3>Filet de Turbot</h3>
 					<p class="accomp">Aux agrumes</p>
+				</div>
 					<div class="cards_menu--check">
 						<p class="cards_menu--price">23€</p>
 						<div class="cards_menu--icon">
@@ -120,9 +132,11 @@
 		<section class="desserts">
 			<h2 class="menu-type">Desserts</h2>
 			
-			<div class="cards_menu">
+			<div class="cards_menu">	
+				<div class="cards__description">
 					<h3>Paris-Brest</h3>
 					<p class="accomp">Revisité</p>
+				</div>
 					<div class="cards_menu--check">
 						<p class="cards_menu--price">23€</p>
 						<div class="cards_menu--icon">
@@ -132,8 +146,10 @@
 			</div>
 			
 			<div class="cards_menu">
+				<div class="cards__description">
 					<h3>Macaron au chocolat d'exception</h3>
 					<p class="accomp">Et glace à la vanille de Madagascar</p>
+				</div>
 					<div class="cards_menu--check">
 						<p class="cards_menu--price">23€</p>
 						<div class="cards_menu--icon">
@@ -143,8 +159,10 @@
 			</div>
 			
 			<div class="cards_menu">
+				<div class="cards__description">
 					<h3>Mousse au chocolat</h3>
 					<p class="accomp">Au piment d'espelette et à la truffe noire</p>
+				</div>
 					<div class="cards_menu--check">
 						<p class="cards_menu--price">23€</p>
 						<div class="cards_menu--icon">
