--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -40,7 +40,10 @@
 		<fieldset>
       
 	<div class="title">
-        <h1>La palette du goût<i class="far fa-heart"></i></h1>
+        <h1>La palette du goût
+			<i class="far fa-heart"></i>
+			<i class="fas fa-heart"></i>
+		</h1>
     </div>
 	 <div class="all_cards-menu">
 		<section class="entrees">
