--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -74,7 +74,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		
       
      	<div class="cards_menu">
 			<div class="cards__description">
@@ -107,7 +107,7 @@
       <h2 class="menu-type">Plats</h2>
      
 	<div class="cards_menu">
-    	<div class="cards_menu--description">
+    	<div class="cards__description">
 			<h3>Noix de coquilles Saint-Jacques</h3>
        		<p class="accomp">Sur lit de purée de céleri-rave</p>
 		</div>
@@ -144,8 +144,7 @@
 				</div>
 			</div>
     </div>
-  
-</div>
+	</div>
 
   <div class="desserts">
     <h2 class="menu-type">Desserts</h2>
