--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -42,7 +42,10 @@
 	   <fieldset>
      
 		<div class="title">
-			<h1>Le délice des sens<i class="far fa-heart"></i></h1>
+			<h1>Le délice des sens
+				<i class="far fa-heart"></i>
+				<i class="fas fa-heart"></i>
+			</h1>
 		</div>
 		<div class="all_cards-menu">
 			<div class="entrees">
