--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -52,30 +52,42 @@
 			<h2 class="menu-type">Entrées</h2>
 		
 			<div class="cards_menu">
-				<label>
-					<span class="menu-title">Tartare de thon</span>
-					<span class="accomp">Assaisonné au yuzu</span>
-					<span class="price">25€</span>
-					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
-				</label>
+				<div class="cards__description">
+					<h3>Tartare de thon</h3>
+					<p class="accomp">Assaisonné au yuzu</p>
+				</div>
+					<div class="cards_menu--check">
+						<p class="cards_menu--price">25€</p>
+						<div class="cards_menu--icon">
+							<i class="far fa-check-circle"></i>
+						</div>
+					</div>
 			</div>
 
 			<div class="cards_menu">
-				<label>
-					<span class="menu-title">Bouchée de homard croustillant</span>
-					<span class="accomp">Et sa farandole de petits légumes</span>
-					<span class="price">35€</span>
-					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
-				</label>
+				<div class="cards__description">
+					<h3>Bouchée de homard croustillant</h3>
+					<p class="accomp">Et sa farandole de petits légumes</p>
+				</div>
+					<div class="cards_menu--check">
+						<p class="cards_menu--price">35€</p>
+						<div class="cards_menu--icon">
+							<i class="far fa-check-circle"></i>
+						</div>
+					</div>
 			</div>
 			
 			<div class="cards_menu">
-				<label>
-					<span class="menu-title">Velouté de cèpes</span>
-					<span class="accomp">Aux truffes</span>
-					<span class="price">20€</span>
-					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
-				</label>
+				<div class="cards__description">
+					<h3>Velouté de cèpes</h3>
+					<p class="accomp">Aux truffes</p>
+				</div>
+					<div class="cards_menu--check">
+						<p class="cards_menu--price">20€</p>
+						<div class="cards_menu--icon">
+							<i class="far fa-check-circle"></i>
+						</div>
+					</div>
 			</div>
 		</div>
 	   
@@ -83,30 +95,42 @@
 			<h2 class="menu-type">Plats</h2>
 
 			<div class="cards_menu">
-				<label>
-					<span class="menu-title">Poulet rôti aux herbes de Provence</span>
-					<span class="accomp">Et sa crème de truffe</span>	
-					<span class="price">40€</span>
-					<input type="checkbox" id="checkbox"><i class="far fa-check-circle"></i>
-				</label>
+				<div class="cards__description">
+					<h3>Poulet rôti aux herbes de Provence</h3>
+					<p class="accomp">Et sa crème de truffe</p>
+				</div>
+					<div class="cards_menu--check">
+						<p class="cards_menu--price">40€</p>
+						<div class="cards_menu--icon">
+							<i class="far fa-check-circle"></i>
+						</div>
+					</div>
 			</div>
 			
 			<div class="cards_menu">
-				<label>
-					<span class="menu-title">Langouste rôtie</span>
-					<span class="accomp">Et ses légumes de saison</span>
-					<span class="price">35€</span>
-					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
-				</label>
+				<div class="cards__description">
+					<h3>Langouste rôtie</h3>
+					<p class="accomp">Et ses légumes de saison</p>
+				</div>
+					<div class="cards_menu--check">
+						<p class="cards_menu--price">35€</p>
+						<div class="cards_menu--icon">
+							<i class="far fa-check-circle"></i>
+						</div>
+					</div>
 			</div>
 
 		    <div class="cards_menu">
-				<label>
-					<span class="menu-title">Côte de boeuf angus</span>
-					<span class="accomp">Et sa purée de panais</span>
-					<span class="price">44€</span>
-					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
-				</label>
+				<div class="cards__description">
+					<h3>Côte de boeuf angus</h3>
+					<p class="accomp">Et sa purée de panais</p>
+				</div>
+					<div class="cards_menu--check">
+						<p class="cards_menu--price">44€</p>
+						<div class="cards_menu--icon">
+							<i class="far fa-check-circle"></i>
+						</div>
+					</div>
 			</div>
 		</div>
 
@@ -114,30 +138,42 @@
 			<h2 class="menu-type">Desserts</h2>
 				
 			<div class="cards_menu">
-				<label>
-					<span class="menu-title">Farandole de desserts</span>
-					<span class="accomp">Du chef</span>
-					<span class="price">18€</span>		
-					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
-				</label>
+				<div class="cards__description">
+					<h3>Farandole de desserts</h3>
+					<p class="accomp">Du chef</p>
+				</div>
+					<div class="cards_menu--check">
+						<p class="cards_menu--price">18€</p>		
+						<div class="cards_menu--icon">
+							<i class="far fa-check-circle"></i>
+						</div>
+					</div>
 			</div>
 		
 			<div class="cards_menu">
-				<label>
-					<span class="menu-title">Crème brûlée</span>
-					<span class="accomp">Revisitée</span>
-					<span class="price">22€</span>
-					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
-				</label>
+				<div class="cards__description">
+					<h3>Crème brûlée</h3>
+					<p class="accomp">Revisitée</p>
+				</div>
+					<div class="cards_menu--check">
+						<p class="cards_menu--price">22€</p>
+						<div class="cards_menu--icon">
+							<i class="far fa-check-circle"></i>
+						</div>
+					</div>
 			</div>
 			
 			<div class="cards_menu">
-				<label>
-					<span class="menu-title">Tiramisu</span>
-					<span class="accomp">A la noisette</span>
-					<span class="price">23€</span>
-					<input type="checkbox" class="checkbox"><i class="far fa-check-circle"></i>
-				</label>
+				<div class="cards__description">
+					<h3>Tiramisu</h3>
+					<p class="accomp">A la noisette</p>
+				</div>
+					<div class="cards_menu--check">
+						<p class="cards_menu--price">23€</p>
+						<div class="cards_menu--icon">
+							<i class="far fa-check-circle"></i>
+						</div>
+					</div>
 			</div>
 		</div>
 		</div>
