--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -54,8 +54,8 @@
 					<h3>Fricassée d'escargots</h3>
 					<p class="accomp">Au piment d'espelette</p>
 				</div>
+				<span class="cards_menu--price">23€</span>
 					<div class="cards_menu--check">
-						<p class="cards_menu--price">23€</p>
 						<div class="cards_menu--icon">
 							<i class="far fa-check-circle"></i>
 						</div>
@@ -67,9 +67,9 @@
 					<h3>Foie gras de canard mi-cuit</h3>
 					<p class="accomp">Et ses copeaux de truffe noire</p>
 				</div>
+				<span class="cards_menu--price">23€</span>
 					<div class="cards_menu--check">
-						<p class="cards_menu--price">23€</p>
-						<div class="cards_menu--icon">
+							<div class="cards_menu--icon">
 							<i class="far fa-check-circle"></i>
 						</div>
 					</div>
@@ -80,8 +80,8 @@
 					<h3>Oeuf au plat</h3>
 					<p class="accomp">Assaisonné à la truffe sur lit de caviar</p>
 				</div>
+				<span class="cards_menu--price">23€</span>
 					<div class="cards_menu--check">
-						<p class="cards_menu--price">23€</p>
 						<div class="cards_menu--icon">
 							<i class="far fa-check-circle"></i>
 						</div>
@@ -97,8 +97,8 @@
 					<h3>Filet de boeuf aux herbes</h3>
 					<p>Accompagné de sa ribambelle de légumes</p>
 				</div>
-					<div class="cards_menu--check">
-						<p class="cards_menu--price">23€</p>
+				<span class="cards_menu--price">23€</span>
+					<div class="cards_menu--check">						
 						<div class="cards_menu--icon">
 							<i class="far fa-check-circle"></i>
 						</div>
@@ -110,8 +110,8 @@
 					<h3>Parmentier de queue de boeuf</h3>
 					<p class="accomp">A la truffe noire et sa purée de panais</p>
 				</div>
+				<span class="cards_menu--price">23€</span>
 					<div class="cards_menu--check">
-						<p class="cards_menu--price">23€</p>
 						<div class="cards_menu--icon">
 							<i class="far fa-check-circle"></i>
 						</div>
@@ -123,8 +123,8 @@
 					<h3>Filet de Turbot</h3>
 					<p class="accomp">Aux agrumes</p>
 				</div>
-					<div class="cards_menu--check">
-						<p class="cards_menu--price">23€</p>
+				<span class="cards_menu--price">23€</span>
+					<div class="cards_menu--check">						
 						<div class="cards_menu--icon">
 							<i class="far fa-check-circle"></i>
 						</div>
@@ -140,8 +140,8 @@
 					<h3>Paris-Brest</h3>
 					<p class="accomp">Revisité</p>
 				</div>
-					<div class="cards_menu--check">
-						<p class="cards_menu--price">23€</p>
+				<span class="cards_menu--price">23€</span>
+					<div class="cards_menu--check">		
 						<div class="cards_menu--icon">
 							<i class="far fa-check-circle"></i>
 						</div>
@@ -153,8 +153,8 @@
 					<h3>Macaron au chocolat d'exception</h3>
 					<p class="accomp">Et glace à la vanille de Madagascar</p>
 				</div>
-					<div class="cards_menu--check">
-						<p class="cards_menu--price">23€</p>
+				<span class="cards_menu--price">23€</span>
+					<div class="cards_menu--check">	
 						<div class="cards_menu--icon">
 							<i class="far fa-check-circle"></i>
 						</div>
@@ -166,8 +166,8 @@
 					<h3>Mousse au chocolat</h3>
 					<p class="accomp">Au piment d'espelette et à la truffe noire</p>
 				</div>
-					<div class="cards_menu--check">
-						<p class="cards_menu--price">23€</p>
+				<span class="cards_menu--price">23€</span>
+					<div class="cards_menu--check">	
 						<div class="cards_menu--icon">
 							<i class="far fa-check-circle"></i>
 						</div>
