--- a/index.html
+++ b/index.html
@@ -12,14 +12,25 @@
 <link rel="stylesheet" type="text/css" href="css/normalize.css">
 <title>"Oh My Food"</title>
 </head>
-	
+
 <body>	
+	
+<div class="loader">
+	<div class="loader__bar"></div>
+	<div class="loader__bar"></div>
+	<div class="loader__bar"></div>
+	<img src="images/ohmyfood.png" alt="logo de oh my food">
+	<div class="loader__bar"></div>
+	<div class="loader__bar"></div> 
+	<div class="loader__bar"></div> 
+</div>
+
 <header>
 		
 <!-- Logo !-->
 	
 	<a href="#">
-		<img id="logo"src="images/ohmyfood.png" alt="logo Oh My Food">
+		<img class="logo"src="images/ohmyfood.png" alt="logo Oh My Food">
 	</a>
 	
 <!-- Bannière lieu  et exploration !-->
