--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -12,8 +12,18 @@
   <title>"Oh My Food"</title>
 </head>
   
-  <body class="container">
+  <body>
     
+	<div class="loader">
+		<div class="loader__bar"></div>
+		<div class="loader__bar"></div>
+		<div class="loader__bar"></div>
+		<img src="images/ohmyfood.png" alt="logo de oh my food">
+		<div class="loader__bar"></div>
+		<div class="loader__bar"></div> 
+		<div class="loader__bar"></div> 
+	</div>
+
 	<!-- Logo !-->
    
 <header>  		
