--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <!-- Logo !-->
 	
 	<a href="#">
-		<img class="logo"src="images/ohmyfood.png" alt="logo Oh My Food">
+		<img class="logo" src="images/ohmyfood.png" alt="logo Oh My Food">
 	</a>
 	
 <!-- Bannière lieu  et exploration !-->
@@ -38,7 +38,7 @@
 	<div class="position">
 		<i class="fas fa-map-marker-alt"></i>
 		<label for="localisation">Paris, Belleville</label>
-		<input style="text" id="localisation" placeholder="Paris, Belleville">
+		<input type="text" id="localisation" placeholder="Paris, Belleville">
 	</div>
 
 	<div class="principal_title">
