--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<div class="loader__bar"></div>
 	<div class="loader__bar"></div>
 	<div class="loader__bar"></div>
-	<img src="images/ohmyfood.png" alt="logo de oh my food">
+	<img class="logo__loader" src="images/ohmyfood.png" alt="logo de oh my food">
 	<div class="loader__bar"></div>
 	<div class="loader__bar"></div> 
 	<div class="loader__bar"></div> 
